--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="flutter_first_demo"
+        android:label="我的flutter"
         android:icon="@mipmap/app_icon">
         <activity
             android:name=".MainActivity"
