--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   http: '>=0.11.3+12'
 #  shared_preferences: "^0.4.1"
   event_bus: "^1.0.1"
+  flutter_webview_plugin: "^0.2.1+2"
 
 dev_dependencies:
   flutter_test:
