--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,1 +1,14 @@
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.daemon=true 
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 
+org.gradle.parallel=true 
+org.gradle.configureondemand=false 
+# 构建优化 ####################
+android.useDeprecatedNdk=true
+
+android.injected.testOnly=false 
+
+
+# 签名
+SIGN_KEY_STORE_PWD=123456
+SIGN_KEY_ALIAS =key
+SIGN_KEY_KEY_PWD =123456
