--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,6 +44,14 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            // 设置支持的 SO 库构架
+//            moduleName "encrpt" //生成的so名字
+//            ldLibs "log", "z", "m"
+            abiFilters 'armeabi',"armeabi-v7a","arm64-v8a"
+        }
+
     }
 
     signingConfigs {
