--- a/.gitignore
+++ b/.gitignore
@@ -69,4 +69,6 @@ build/
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
-
+/.gradle/
+/gradle/
+/local.properties
