--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,8 @@ build/
 **/ios/Flutter/flutter_assets/
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
+**/ios/Runner.xcodeproj/project.pbxproj
+**/ios/Runner.xcworkspace/contents.xcworkspacedata
 
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
