--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,14 @@ dependencies:
 #  rxDrat
   rxdart: ^0.20.0
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  json_annotation: ^2.0.0
 
+dev_dependencies:
+#  flutter_test:
+#    sdk: flutter
+
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
