--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
 
   json_annotation: ^2.0.0
 
+#  渐变文本
+  gradient_text: ^1.0.2
+
 dev_dependencies:
 #  flutter_test:
 #    sdk: flutter
