--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
 #  渐变文本
   gradient_text: ^1.0.2
 
+# webview
+  flutter_webview_plugin: ^0.3.5
+
 dev_dependencies:
 #  flutter_test:
 #    sdk: flutter
