--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,13 @@ dependencies:
   flutter_webview_plugin: ^0.3.5
 
 dev_dependencies:
-#  flutter_test:
-#    sdk: flutter
+  flutter_test:
+    sdk: flutter
 
   build_runner: ^1.0.0
   json_serializable: ^2.0.0
+
+#  test: ^1.5.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
