--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+//        maven { url "https://jitpack.io" }
+//        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
     }
 
     dependencies {
@@ -15,6 +17,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+//        maven { url "https://jitpack.io" }
+//        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
     }
 }
 
