--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
 
 # webview
   flutter_webview_plugin: ^0.3.5
+  cached_network_image: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +49,7 @@ dev_dependencies:
 
   build_runner: ^1.0.0
   json_serializable: ^2.0.0
+
 
 #  test: ^1.5.1
 
@@ -63,7 +65,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - images/ic_launcher.png
+    - images/avatar_default_icon.webp
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
