--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_webview_plugin: ^0.3.5
   cached_network_image: ^1.0.0
 
+  flutter_localizations:
+      sdk: flutter
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
